# fastapi-demo

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
fastapi_demo/: .style.yapf
fastapi_demo/.ipynb_checkpoints/: main-checkpoint.py
fastapi_demo/calculator/: enshuritsu.ipynb  enshuritsu.py
fastapi_demo/calculator/.ipynb_checkpoints/: enshuritsu-checkpoint.py
