[tool.poetry]
name = "stardust"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.3.3"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
pandas = "^1.4.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
block = "^0.0.5"
ipykernel = "^6.12.1"
flake8 = "^4.0.1"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

